@@ -34,6 +34,7 @@
 
 require_once('common/include/Error.class');
 require_once('common/pm/ProjectTask.class');
+require_once('www/pm/include/ProjectTaskHTML.class');
 
 class ProjectTaskFactory extends Error {
 
@@ -57,6 +58,7 @@ class ProjectTaskFactory extends Error {
 	var $offset;
 	var $max_rows;
 	var $fetched_rows;
+	var $view_type;
 
 	/**
 	 *  Constructor.
@@ -90,8 +92,9 @@ class ProjectTaskFactory extends Error {
 	 *	@param	string	Whether to set these prefs into the user_prefs table - use "custom".
 	 *	@param	int	Include this param if you want to limit to a certain assignee.
 	 *	@param	int	Include this param if you want to limit to a certain category.
+	 *	@param	string	What view mode the screen should be in.
 	 */
-	function setup($offset,$order,$max_rows,$set,$_assigned_to,$_status,$_category_id) {
+	function setup($offset,$order,$max_rows,$set,$_assigned_to,$_status,$_category_id,$_view) {
 //echo "<BR>offset: $offset| order: $order|max_rows: $max_rows|_assigned_to: $_assigned_to|_status: $_status|_category_id: $_category_id +";
 		if ((!$offset) || ($offset < 0)) {
 			$this->offset=0;
@@ -126,7 +129,7 @@ class ProjectTaskFactory extends Error {
 			/*
 				if this custom set is different than the stored one, reset preference
 			*/
-			$pref_=$_assigned_to.'|'.$_status.'|'.$_category_id;
+			$pref_=$_assigned_to.'|'.$_status.'|'.$_category_id.'|'.$_view;
 			if (session_loggedin() && ($pref_ != $u->getPreference('pm_brow_cust'.$this->ProjectGroup->Group->getID()))) {
 				//echo 'setting pref';
 				$u->setPreference('pm_brow_cust'.$this->ProjectGroup->Group->getID(),$pref_);
@@ -138,12 +141,14 @@ class ProjectTaskFactory extends Error {
 					$_assigned_to=$prf_arr[0];
 					$_status=$prf_arr[1];
 					$_category_id=$prf_arr[2];
+					$_view=$prf_arr[3];
 				}
 			}
 		}
 		$this->status=$_status;
 		$this->assigned_to=$_assigned_to;
 		$this->category=$_category_id;
+		$this->view_type=$_view;
 
 		if (!$max_rows || $max_rows < 5) {
 			$max_rows=50;
@@ -155,8 +160,9 @@ class ProjectTaskFactory extends Error {
 	 *	getTasks - get an array of ProjectTask objects.
 	 *
 	 *	@return	array	The array of ProjectTask objects.
+	 *	@param	bool	True will create an array of ProjectTaskHTML instead of ProjectTask objects.
 	 */
-	function &getTasks() {
+	function &getTasks($htmlobjs=false) {
 		if ($this->project_tasks) {
 			return $this->project_tasks;
 		}
@@ -215,7 +221,10 @@ WHERE project_assigned_to.project_task_id=project_task_vw.project_task_id;
 			return false;
 		} else {
 			while ($arr =& db_fetch_array($result)) {
-				$this->project_tasks[] = new ProjectTask($this->ProjectGroup, $arr['project_task_id'], $arr);
+				if (!$htmlobjs)
+					$this->project_tasks[] = new ProjectTask($this->ProjectGroup, $arr['project_task_id'], $arr);
+				else
+					$this->project_tasks[] = new ProjectTaskHTML($this->ProjectGroup,$arr['project_task_id']);
 			}
 		}
 		return $this->project_tasks;
